Fix legend alignment

--- a/app/styles/app/_timeline.scss
+++ b/app/styles/app/_timeline.scss
@@ -278,6 +278,7 @@
 
       input {
         margin: -2px 4px 0 0;
+        vertical-align: middle;
       }
     }
   }
@@ -286,7 +287,7 @@
     display: block;
     height: 12px;
     width: 12px;
-    margin-top: 4px;
+    // margin-top: 4px;
   }
 }
 
